Expand logging, fixup README

--- a/config.base.json
+++ b/config.base.json
@@ -9,5 +9,8 @@
             "pass": "password",
             "path": "merx.xml" 
         }
+    },
+    "log": {
+        "level": "INFO"
     }
 }
